Refactor components and styles: remove unused code, update imports, and enhance animations

--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pm2": "pm2 start pm2.json"
   },
   "dependencies": {
     "@grampro/headless-helpers": "^1.0.10",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
